--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+# Musika
+Musika is the first project created after 4 weeks at General Assembly as part of my Web Development Immersive course.
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+## Technologies used
+Ruby on Rails, HTML and multiple gems (CarrierWave, act as commentable, Devise).Framework Foundation for the styling.
